--- a/index.html
+++ b/index.html
@@ -4,6 +4,27 @@
 <!-- the title will appear on the page-->
 <head>
 <title>Employee Interests Survey</title>
+ <style>
+/*   This is Bodycolor,size,font. */
+    body{
+        /* background-color: rgb(155, 237, 255); */
+        background-color:  #05c46b;
+        font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+        font-size: 27px;
+    }
+/*    This is  Submit button look */
+    input[type="submit"]{
+        background-color: #a9a9ce;
+        border: 1px solid rgb(128, 18, 18);
+        border-radius: 2px;
+        font-family: inherit;
+        font-size: 21px;
+        display: block;
+        width: 20%;
+        margin-top: 50px;
+        margin-bottom: 20px;
+        } 
+</style>
 </head>
 <body>
 <!-- as it is a survey form, we will need to submit the details, hence we use form -->
