--- a/index.html
+++ b/index.html
@@ -40,15 +40,21 @@ How do you like to read about your favorite topics?
 What genre of movies do you like?
 <!--Select box lets you choose one of the multiple dropdown options-->
 <select name="moviepref" ><option>
-<option value=1 selected = "true">comedy
-<option value=2 >romance
-<option value=3 >thriller
-<option value=4 >horror
-<option value=5 >biopic
+<option value=1 selected = "true">Comedy
+<option value=2 >Romance
+<option value=3 >Thriller
+<option value=4 >Horror
+<option value=5 >Biopic
 </select>
 </br></br>
 <!--submits the information entered in the form by the user -->
 <input type=submit value="Submit form">
+<div>Contribution done by Abhishek naula</div>
+<div>Contribution done by Abhishek naula</div>
+<div>Contribution done by Abhishek naula</div>
+<div>Contribution done by Abhishek naula</div>
+<div>Contribution done by Abhishek naula</div>
+<div>Contribution done by Abhishek naula</div>
 </div>
 </form>
 </body>
